...
    return password.match(lowerCheck) && password.match(upperCheck) && password.match(numCheck) && password.length >= 8;
  };

  render () {
    return (

      <View style={Style.container} testID={"ExampleScreenContainer"}>
        <ScrollView contentContainerStyle={Style.container}>
          <View style={{ ...Style.section, alignItems: "center", height: "25%" }}>
            <Image source={Logo} style={{ width: 200, height: 200 }}/>
          </View>
          <View style={{ ...Style.section, height: "15%" }}>
            <View testID={'facebook-button'}>
...

          <View style={Style.section}>
            <Text style={{ textAlign: "center", marginBottom: 12, fontSize: 36 }} h3> Log in or Sign up</Text>
            <SignUpForm Icon={MailIcon} emailSignUp={this.handleEmailSignUp}
                        emailLogIn={this.handleEmailLogIn}/>
          </View>
          {this.state.signUpErr ? <Text testID={"SignUpErrMessage"}
                                        style={{ color: "red" }}>{this.state.signUpErr}</Text> : null}
          {this.state.signUpComplete ? <Text style={{ color: "green" }} testID={'signup-message'}>{this.state.signUpComplete}</Text> : null}
        </ScrollView>
      </View>
    )
      ;
...
