...
        <View style={{justifyContent: 'center', alignItems: 'center', width: "100%"}} testID={"User-Deal-Screen-Spinner"}>
          <View style={{marginTop: 300}}>
            <Spinner color="red" style={{width: 150, height: 150}}/>
          </View>
        </View>
        :
      <View style={styles.mainContainer} testID={'UserProfileScreenContainer'}>
        <HeaderNav handleLeftButton={this.handleBackButton} handleRightButton={this.handleSaveProfile} leftLabel={'Back'} title={'Profile'} rightLabel={'Save'} />
        <ScrollView style={styles.container}>
          <View>
            <Form>
              <Item fixedLabel style={{height: 75}}>
              <Label>First Name</Label>
...
