...
          <View style={{marginTop: 300}}>
            <Spinner color="red" style={{width: 150, height: 150}}/>
          </View>
        </View>
        :
      this.props.user.profile.favouriteMalls[0] ?
      <View style={styles.mainContainer} testID={"UserDealScreenContainer"}>
        <HeaderNav handleLeftButton={this.handleBackButton} handleRightButton={this.handleLogout} leftLabel={"Back"}
                   title={"Deals"} rightLabel={"Logout"}/>
        <Modal
          animationType="slide"
          transparent={false}
          visible={this.state.modalVisible}>
...
